<resources>
    <string name="app_name">WeatherForecastApplication</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="_24_hour_weather_report">24-Hour Weather Report</string>
    <string name="_7_day_weather_report">7-Day Weather Report</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="home">Home</string>
    <string name="pressure">Pressure</string>
    <string name="Humidity">Humidity</string>
    <string name="Wind">Wind</string>
    <string name="Visiblity">Visiblity</string>
    <string name="Cloud">Cloud</string>
    <string name="Pressure">Pressure</string>
    <string name="Sun_Rise">Sun Rise</string>
    <string name="Visibility">Visibility</string>
    <string name="WindSpeed">Wind Speed</string>
    <string name="weather_setup">Weather Setup</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="shared_pref" translatable="false">com.example.weatherforecastapplication.GEDO</string>
    <string name="LAT" translatable="false">LAT</string>
    <string name="LON" translatable="false">LON</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="English">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature">Temperature</string>
    <string name="units">Units</string>
    <string name="celsius">Temperature is Celsius, Speed is m/s </string>
    <string name="Kelvin">Temperature is Kelvin, Speed is m/s</string>
    <string name="fahrenheit">Temperature is Fahrenheit, Speed is mm/h</string>
    <string name="TIMEZONE" translatable="false">TIMEZONE</string>
    <string name="MAP" translatable="false">MAP</string>
    <string name="FIRST" translatable="false">FIRST</string>
    <string name="GPS" translatable="false">GPS</string>
    <string name="LOCATION" translatable="false">LOCATION</string>
    <string name="LAN" translatable="false">LAN</string>
    <string name="UNITS" translatable="false">UNITS</string>
    <string name="LOCATIONCHOICE" translatable="false">LOCATIONCHOICE</string>
    <string name="Celsusi">°C</string>
    <string name="Ferherhit">F</string>
    <string name="KELVIN">°K</string>
    <string name="MeterPerSecond">m/s</string>
    <string name="MiliPerHour">mm/h</string>
    <string name="Pascal">PA</string>
    <string name="favourite">Favourite</string>
    <string name="shared_fav_pref" translatable="false">shared_fav_pref</string>
    <string name="FAV_FLAG" translatable="false">FLAG</string>
    <string name="Delete">Delete</string>
    <string name="AWTD">Are You Want to delete</string>
    <string name="SuccessDeleted">Successfully Deleted</string>
    <string name="save">save</string>
    <string name="YMCN">You should connect to network to get weather update</string>
    <string name="LPG">Location Permission Granted</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="SAT">Select Appointment time</string>
    <string name="choose_time">Choose time</string>
    <string name="alerts">Alerts</string>
    <string name="ID">ID</string>
    <string name="succ_deleted">Successfully Deleted</string>
    <string name="DESC">DESC</string>
    <string name="IsAlert">isAlert</string>
    <string name="ISALERT">isAlert</string>
    <string name="channel_name">ForcastWeather</string>
    <string name="weather_Fine">The Weather is Fine</string>
    <string name="weather_alerts">Weather Alerts</string>
    <string name="ther_is_no_alarm">There is No Alert for this time</string>
    <string name="the_weather_is">The weather is</string>
    <string name="ok">OK</string>
    <string name="to_enjoy_features">To enjoy our features</string>
    <string name="ENDDAY">endDay</string>
    <string name="there_is_no_alarm_yet">There is No Alarm Yet</string>
    <string name="no_places">No Places</string>
</resources>