<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.weatherforecastapplication.home.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_mapsFragment"
            app:destination="@id/mapsFragment" />
        <action
            android:id="@+id/action_navigation_home_to_customDialog"
            app:destination="@id/customDialog" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.weatherforecastapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.weatherforecastapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/settingScreen"
        android:name="com.example.weatherforecastapplication.SettingScreen"
        android:label="fragment_setting_screen"
        tools:layout="@layout/fragment_setting_screen" >
        <action
            android:id="@+id/action_settingScreen_to_mapsFragment"
            app:destination="@id/mapsFragment" />
        <action
            android:id="@+id/action_settingScreen_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.weatherforecastapplication.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_mapsFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>
    <dialog
        android:id="@+id/customDialog"
        android:name="com.example.weatherforecastapplication.home.view.CustomDialog"
        android:label="CustomDialog" >
        <action
            android:id="@+id/action_customDialog_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </dialog>
</navigation>