<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="0dp"
    tools:context=".dialog.alertdialog.view.AlertTimeDialog">

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"

        android:clickable="false"
        android:textColor="@color/navy"
        android:text="@string/from"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"

        android:backgroundTint="@color/white"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        android:clickable="false"
        android:textColor="@color/navy"


        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/to"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:backgroundTint="@color/white"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        android:textColor="@color/navy"

        android:id="@+id/btnFrom"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"

        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:text="5:35 AM" />

    <Button
        android:backgroundTint="@color/white"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        android:textColor="@color/navy"
        android:id="@+id/btn_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:text="5:35 AM" />

    <Button
        android:backgroundTint="@color/white"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        android:textColor="@color/navy"

        android:id="@+id/btn_save_alert"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="@string/save"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFrom" />
</androidx.constraintlayout.widget.ConstraintLayout>