<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".home.view.HomeFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/home"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/text_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/card_drawer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="Alsherqia egypt"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_drawer"
            tools:text="Alsherqia egypt" />

        <TextView
            android:id="@+id/txt_today_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="23/3/2022"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_drawer"
            tools:text="23/3/2022" />

        <TextView
            android:id="@+id/txt_today_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="32 c"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/txt_city_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_city_name"
            tools:text="32 c" />

        <TextView
            android:id="@+id/txt_todat_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="clear sky"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/txt_today_temp"
            app:layout_constraintTop_toBottomOf="@+id/txt_today_temp"
            tools:text="clear sky" />

        <TextView
            android:id="@+id/txt_24_weather_Report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="12dp"

            android:text="@string/_24_hour_weather_report"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_todat_desc" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recy_view_hour_weather"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_24_weather_Report"
            tools:listitem="@layout/card_layout_hours_weather" />

        <TextView
            android:id="@+id/txt_7_day_weat_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/_7_day_weather_report"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recy_view_hour_weather" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recy_view_day_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_7_day_weat_report"
            tools:listitem="@layout/card_layout_day_weather" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>